--- a/projects/dynamic-i18n/src/app/home/home.component.html
+++ b/projects/dynamic-i18n/src/app/home/home.component.html
@@ -27,25 +27,326 @@ Welcome Message: {{ welcome }} {{ nameValue }}
 Welcome Message: {{ welcome1 }} {{ nameValue }}
 
 
-<h1 > {{heading}}</h1>
-<h2 >{{metaData}}</h2>
+<h1 > {{heading1}}</h1>
+<h2 >{{metaData1}}</h2>
 <p>
-  <a  [href]="href" title="attribute Check"> Attribute</a>
+  <a  [href]="href1" title="attribute Check"> Attribute</a>
 </p>
 
 
 <select >
-  <option *ngFor="let option of options" [value]="option.id" >{{ option.value }}</option>
+  <option *ngFor="let option of options1" [value]="option.id" >{{ option.value }}</option>
 </select>
 
 
-<input  [placeholder]="placeholder" name="placeholder"/>
+<input  [placeholder]="placeholder1" name="placeholder"/>
 
-<img [src]="imageValue"  [alt]="imageValue" />
+<img [src]="imageValue1"  [alt]="imageValue1" />
 
 
-<button >{{submit}}</button>
-<div >{{div}}</div>
+<button >{{submit1}}</button>
+<div >{{div1}}</div>
+
+
+
+<h1 > {{heading2}}</h1>
+<h2 >{{metaData2}}</h2>
+<p>
+  <a  [href]="href2" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options2" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder2" name="placeholder"/>
+
+<img [src]="imageValue2"  [alt]="imageValue2" />
+
+
+<button >{{submit2}}</button>
+<div >{{div2}}</div>
+
+<h1 > {{heading3}}</h1>
+<h2 >{{metaData3}}</h2>
+<p>
+  <a  [href]="href3" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options3" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder3" name="placeholder"/>
+
+<img [src]="imageValue3"  [alt]="imageValue3" />
+
+
+<button >{{submit3}}</button>
+<div >{{div3}}</div>
+
+<h1 > {{heading4}}</h1>
+<h2 >{{metaData4}}</h2>
+<p>
+  <a  [href]="href4" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options4" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder4" name="placeholder"/>
+
+<img [src]="imageValue4"  [alt]="imageValue4" />
+
+
+<button >{{submit4}}</button>
+<div >{{div4}}</div>
+
+
+<h1 > {{heading5}}</h1>
+<h2 >{{metaData5}}</h2>
+<p>
+  <a  [href]="href5" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options5" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder5" name="placeholder"/>
+
+<img [src]="imageValue5"  [alt]="imageValue5" />
+
+
+<button >{{submit5}}</button>
+<div >{{div5}}</div>
+
+
+
+
+<h1 > {{heading6}}</h1>
+<h2 >{{metaData6}}</h2>
+<p>
+  <a  [href]="href6" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options6" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder6" name="placeholder"/>
+
+<img [src]="imageValue6"  [alt]="imageValue6" />
+
+
+<button >{{submit6}}</button>
+<div >{{div6}}</div>
+
+
+
+<h1 > {{heading7}}</h1>
+<h2 >{{metaData7}}</h2>
+<p>
+  <a  [href]="href7" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options7" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder7" name="placeholder"/>
+
+<img [src]="imageValue7"  [alt]="imageValue7" />
+
+
+<button >{{submit7}}</button>
+<div >{{div7}}</div>
+
+
+
+<h1 > {{heading8}}</h1>
+<h2 >{{metaData8}}</h2>
+<p>
+  <a  [href]="href8" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options8" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder8" name="placeholder"/>
+
+<img [src]="imageValue8"  [alt]="imageValue8" />
+
+
+<button >{{submit8}}</button>
+<div >{{div8}}</div>
+
+
+
+<h1 > {{heading9}}</h1>
+<h2 >{{metaData9}}</h2>
+<p>
+  <a  [href]="href9" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options9" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder9" name="placeholder"/>
+
+<img [src]="imageValue9"  [alt]="imageValue9" />
+
+
+<button >{{submit9}}</button>
+<div >{{div9}}</div>
+
+
+
+<h1 > {{heading10}}</h1>
+<h2 >{{metaData10}}</h2>
+<p>
+  <a  [href]="href10" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options10" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder10" name="placeholder"/>
+
+<img [src]="imageValue10"  [alt]="imageValue10" />
+
+
+<button >{{submit10}}</button>
+<div >{{div10}}</div>
+
+
+
+<h1 > {{heading11}}</h1>
+<h2 >{{metaData11}}</h2>
+<p>
+  <a  [href]="href11" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options11" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder11" name="placeholder"/>
+
+<img [src]="imageValue11"  [alt]="imageValue11" />
+
+
+<button >{{submit11}}</button>
+<div >{{div11}}</div>
+
+
+<h1 > {{heading12}}</h1>
+<h2 >{{metaData12}}</h2>
+<p>
+  <a  [href]="href12" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options12" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder12" name="placeholder"/>
+
+<img [src]="imageValue12"  [alt]="imageValue12" />
+
+
+<button >{{submit12}}</button>
+<div >{{div12}}</div>
+
+
+
+<h1 > {{heading13}}</h1>
+<h2 >{{metaData13}}</h2>
+<p>
+  <a  [href]="href13" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options13" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder13" name="placeholder"/>
+
+<img [src]="imageValue13"  [alt]="imageValue13" />
+
+
+<button >{{submit13}}</button>
+<div >{{div13}}</div>
+
+
+<h1 > {{heading14}}</h1>
+<h2 >{{metaData14}}</h2>
+<p>
+  <a  [href]="href14" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options14" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder14" name="placeholder"/>
+
+<img [src]="imageValue14"  [alt]="imageValue14" />
+
+
+<button >{{submit14}}</button>
+<div >{{div14}}</div>
+
+
+<h1 > {{heading15}}</h1>
+<h2 >{{metaData15}}</h2>
+<p>
+  <a  [href]="href15" title="attribute Check"> Attribute</a>
+</p>
+
+
+<select >
+  <option *ngFor="let option of options15" [value]="option.id" >{{ option.value }}</option>
+</select>
+
+
+<input  [placeholder]="placeholder15" name="placeholder"/>
+
+<img [src]="imageValue15"  [alt]="imageValue15" />
+
+
+<button >{{submit15}}</button>
+<div >{{div15}}</div>
 
  <app-home1></app-home1>
  <app-home2></app-home2>
