checks for extra component s

--- a/projects/ngx-translation/src/app/app.component.html
+++ b/projects/ngx-translation/src/app/app.component.html
@@ -117,4 +117,16 @@
 <app-home1></app-home1>
 <app-home2></app-home2>
 <app-home3></app-home3>
+
+
+
+<app-home1></app-home1>
+<app-home2></app-home2>
+<app-home3></app-home3>
+
+
+
+<app-home1></app-home1>
+<app-home2></app-home2>
+<app-home3></app-home3>
 <router-outlet />
