checks for Data

--- a/projects/ngx-translation/src/app/app.component.html
+++ b/projects/ngx-translation/src/app/app.component.html
@@ -21,98 +21,98 @@
 <button (click)="changeLanguage()" > only btn {{"submit.label" | translate}}</button>
 <div >{{"submit.label" | translate}}</div>
 
-<h1 >{{ "title" | translate}}</h1>
-<h2>{{"metaData" | translate}}</h2>
+<h1 >{{ "title1" | translate}}</h1>
+<h2>{{"metaData1" | translate}}</h2>
 <p>
-  <a [href]="'src' | translate" title="attribute Check">{{"name.label"}}</a>
+  <a [href]="'src1' | translate" title="attribute Check">{{"name1.label"}}</a>
 </p>
 
   
-  <p>{{today | date:(translate.instant('DATE_FORMAT'))}}</p>
+  <p>{{today | date:(translate.instant('DATE_FORMAT1'))}}</p>
   <p>{{newTitle}}</p>
 
 
-  <input  [placeholder]="'name.placeholder' | translate" />
+  <input  [placeholder]="'name1.placeholder' | translate" />
 
 
   <select >
-  <option *ngFor="let gender of genderList" value="{{ 'gender.options.' + gender | translate }}" >{{ "gender.options." + gender | translate }}</option>
+  <option *ngFor="let gender of genderList" value="{{ 'gender1.options.' + gender | translate }}" >{{ "gender1.options." + gender | translate }}</option>
 </select>
 
-<img src="app.png" [alt]="'comment.label' | translate" />
+<img src="app.png" [alt]="'comment1.label' | translate" />
 
-<button >{{"submit.label" | translate}}</button>
-<div >{{"submit.label" | translate}}</div>
+<button >{{"submit1.label" | translate}}</button>
+<div >{{"submit1.label" | translate}}</div>
 
-<h1 >{{ "title" | translate}}</h1>
-<h2>{{"metaData" | translate}}</h2>
+<h1 >{{ "title2" | translate}}</h1>
+<h2>{{"metaData2" | translate}}</h2>
 <p>
-  <a [href]="'src' | translate" title="attribute Check">{{"name.label"}}</a>
+  <a [href]="'src2' | translate" title="attribute Check">{{"name2.label"}}</a>
 </p>
 
   
-  <p>{{today | date:(translate.instant('DATE_FORMAT'))}}</p>
+  <p>{{today | date:(translate.instant('DATE_FORMAT2'))}}</p>
   <p>{{newTitle}}</p>
 
 
-  <input  [placeholder]="'name.placeholder' | translate" />
+  <input  [placeholder]="'name2.placeholder' | translate" />
 
 
   <select >
-  <option *ngFor="let gender of genderList" value="{{ 'gender.options.' + gender | translate }}" >{{ "gender.options." + gender | translate }}</option>
+  <option *ngFor="let gender of genderList" value="{{ 'gender2.options.' + gender | translate }}" >{{ "gender2.options." + gender | translate }}</option>
 </select>
 
-<img src="app.png" [alt]="'comment.label' | translate" />
+<img src="app.png" [alt]="'comment2.label' | translate" />
 
-<button >{{"submit.label" | translate}}</button>
-<div >{{"submit.label" | translate}}</div>
+<button >{{"submit2.label" | translate}}</button>
+<div >{{"submit2.label" | translate}}</div>
 
-<h1 >{{ "title" | translate}}</h1>
-<h2>{{"metaData" | translate}}</h2>
+<h1 >{{ "title3" | translate}}</h1>
+<h2>{{"metaData3" | translate}}</h2>
 <p>
-  <a [href]="'src' | translate" title="attribute Check">{{"name.label"}}</a>
+  <a [href]="'src3' | translate" title="attribute Check">{{"name3.label"}}</a>
 </p>
 
   
-  <p>{{today | date:(translate.instant('DATE_FORMAT'))}}</p>
+  <p>{{today | date:(translate.instant('DATE_FORMAT3'))}}</p>
   <p>{{newTitle}}</p>
 
 
-  <input  [placeholder]="'name.placeholder' | translate" />
+  <input  [placeholder]="'name3.placeholder' | translate" />
 
 
   <select >
-  <option *ngFor="let gender of genderList" value="{{ 'gender.options.' + gender | translate }}" >{{ "gender.options." + gender | translate }}</option>
+  <option *ngFor="let gender of genderList" value="{{ 'gender3.options.' + gender | translate }}" >{{ "gender3.options." + gender | translate }}</option>
 </select>
 
-<img src="app.png" [alt]="'comment.label' | translate" />
+<img src="app.png" [alt]="'comment3.label' | translate" />
 
-<button >{{"submit.label" | translate}}</button>
-<div >{{"submit.label" | translate}}</div>
+<button >{{"submit3.label" | translate}}</button>
+<div >{{"submit3.label" | translate}}</div>
 
-<h1 >{{ "title" | translate}}</h1>
-<h2>{{"metaData" | translate}}</h2>
+
+<h1 >{{ "title4" | translate}}</h1>
+<h2>{{"metaData4" | translate}}</h2>
 <p>
-  <a [href]="'src' | translate" title="attribute Check">{{"name.label"}}</a>
+  <a [href]="'src4' | translate" title="attribute Check">{{"name4.label"}}</a>
 </p>
 
   
-  <p>{{today | date:(translate.instant('DATE_FORMAT'))}}</p>
+  <p>{{today | date:(translate.instant('DATE_FORMAT4'))}}</p>
   <p>{{newTitle}}</p>
 
 
-  <input  [placeholder]="'name.placeholder' | translate" />
+  <input  [placeholder]="'name4.placeholder' | translate" />
 
 
   <select >
-  <option *ngFor="let gender of genderList" value="{{ 'gender.options.' + gender | translate }}" >{{ "gender.options." + gender | translate }}</option>
+  <option *ngFor="let gender of genderList" value="{{ 'gender4.options.' + gender | translate }}" >{{ "gender4.options." + gender | translate }}</option>
 </select>
 
-<img src="app.png" [alt]="'comment.label' | translate" />
+<img src="app.png" [alt]="'comment4.label' | translate" />
 
-<button >{{"submit.label" | translate}}</button>
-<div >{{"submit.label" | translate}}</div>
-
+<button >{{"submit4.label" | translate}}</button>
+<div >{{"submit4.label" | translate}}</div>
 
 <app-home1></app-home1>
 <app-home2></app-home2>
